# kv2streamer

./: .gitignore  CONTRIBUTORS  LICENSE  README.md  issues
kv2server-applications/: README
kv2server-applications/KV2ServerCorrdinateMapperTableGenerator/: KV2ServerCorrdinateMapperTableGenerator.sln
kv2server-applications/KV2ServerCorrdinateMapperTableGenerator/KV2ServerCorrdinateMapperTableGenerator/: ConversionTableWriter.cpp  ConversionTableWriter.h  KV2ServerCorrdinateMapperTableGenerator.vcxproj  KV2ServerCorrdinateMapperTableGenerator.vcxproj.filters  main.cpp
kv2server-applications/kv2server/: AbstractMulticaster.cpp  AbstractMulticaster.h  AudioMulticaster.cpp  AudioMulticaster.h  BodyIndexMulticaster.cpp  BodyIndexMulticaster.h  BodyMulticaster.cpp  BodyMulticaster.h  ColorMaskedUsersMulticaster.cpp  ColorMaskedUsersMulticaster.h  ColorMulticaster.cpp  ColorMulticaster.h  ColoredDepthMulticaster.cpp  ColoredDepthMulticaster.h  DepthMulticaster.cpp  DepthMulticaster.h  KV2Server.cpp  KV2Server.h  Utilities.h  main.cpp
kv2server-applications/kv2server_VS12/: kv2server_VS12.sln
kv2server-applications/kv2server_VS12/kv2server_application/: kv2server_application.vcxproj  kv2server_application.vcxproj.filters
kv2server-applications/oscpack/: Makefile
kv2server-applications/oscpack/ip/: UdpSocket.h
kv2server-applications/oscpack/ip/posix/: UdpSocket.cpp
kv2server-applications/oscpack/ip/win32/: UdpSocket.cpp
kv2streamer-lib/: CMakeLists.txt
kv2streamer-lib/CMake/: FindGLIB.cmake  FindGStreamer.cmake
kv2streamer-lib/gst-wrapper/: CMakeLists.txt  GstAppSinkPipeline.cpp  GstAppSinkPipeline.h  GstAppSrcPipeline.cpp  GstAppSrcPipeline.h  GstPipelineWrapper.cpp  GstPipelineWrapper.h  GstreamerPipelines.h
kv2streamer-lib/kv2client/: CMakeLists.txt  KV2ClientCommon.h  SharedConfig.h
kv2streamer-lib/kv2client/audio/: AudioFrameStreamer.cpp  AudioFrameStreamer.h  IAudioBeamSubFrame.cpp  IAudioBeamSubFrame.h
kv2streamer-lib/kv2client/base_streamer/: BaseFrameStreamer.cpp  BaseFrameStreamer.h
kv2streamer-lib/kv2client/body/: BodyFrameStreamer.cpp  BodyFrameStreamer.h  IBody.cpp  IBody.h  IBodyFrame.cpp  IBodyFrame.h
kv2streamer-lib/kv2client/body_index/: BodyIndexFrameStreamer.cpp  BodyIndexFrameStreamer.h  IBodyIndexFrame.cpp  IBodyIndexFrame.h
kv2streamer-lib/kv2client/client/: KV2Client.cpp  KV2Client.h
kv2streamer-lib/kv2client/color/: ColorFrameStreamer.cpp  ColorFrameStreamer.h  IColorFrame.cpp  IColorFrame.h
kv2streamer-lib/kv2client/color_masked_users/: ColorMaskedUsersFrameStreamer.cpp  ColorMaskedUsersFrameStreamer.h  IColorMaskedUsersFrame.cpp  IColorMaskedUsersFrame.h
kv2streamer-lib/kv2client/colored_depth/: ColoredDepthFrameStreamer.cpp  ColoredDepthFrameStreamer.h  IColoredDepthFrame.cpp  IColoredDepthFrame.h
kv2streamer-lib/kv2client/coordinate_mapper/: CoordinateMapperReceiver.cpp  CoordinateMapperReceiver.h
kv2streamer-lib/kv2client/depth/: DepthFrameStreamer.cpp  DepthFrameStreamer.h  IDepthFrame.cpp  IDepthFrame.h
kv2streamer-lib/kv2client/utils/: Enumerations.h  Structures.h
kv2streamer-lib/oscpack-wrapper/: CMakeLists.txt  oscMessage.cpp  oscMessage.h  oscReceiver.cpp  oscReceiver.h  oscSender.cpp  oscSender.h  oscWrapper.h
kv2streamer-lib/tool/: CMakeLists.txt  kv2client-config.h.in  kv2client-version.cxx
sample-client-applications/: README
sample-client-applications/kv2client_codelite/: Makefile  README  kv2client_codelite.workspace
sample-client-applications/kv2client_codelite/.codelite/: kv2client_codelite.workspace.someone  subversion.conf
sample-client-applications/kv2client_codelite/kv2clientApplication/: GLFWBaseApp.cpp  GLFWBaseApp.h  KV2ClientExample.cpp  KV2ClientExample.h  glTexture2DWrapper.hpp  kv2clientApplication.mk  kv2clientApplication.project  kv2clientApplication.txt  main.cpp
sample-client-applications/kv2client_codelite/kv2clientApplication/Debug/: KV2SENSOR_SAMPLE.kv2dat
